--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -836,6 +836,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d40d32c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = input(\"Enter a text\")\n",
+    "\n",
+    "match t:\n",
+    "    case _ if t == t[::-1]:\n",
+    "        print(f\"{t} Palindrome\")\n",
+    "    case _:\n",
+    "        print(f\"{t} Not Palindrome\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0d234a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "match num:\n",
+    "    case _ if num > 0:\n",
+    "        print(f\"{num} is Positive number\")\n",
+    "    case _ if num < 0:\n",
+    "        print(f\"{num} Negative number\")\n",
+    "    case _:\n",
+    "        print(\"Zero\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7fba5899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 is divisible by 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "match num:\n",
+    "    case _ if num % 2 == 0:  # Check if divisible by 2\n",
+    "        print(f\"{num} is divisible by 2\")\n",
+    "    case _:\n",
+    "        print(f\"{num} is not divisible by 2\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "482c9a39",
    "metadata": {},
