--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -5,7 +5,9 @@
    "id": "77d673d2",
    "metadata": {},
    "source": [
-    "## **LOOPS**"
+    "## **LOOPS**\n",
+    "Python supports several loop statements that allow you to iterate over data, repeat actions, and control the flow of the program. \n",
+    "- Below are the different types of loops and control statements in Python:"
    ]
   },
   {
@@ -21,14 +23,15 @@
     "### **'FOR' LOOP**\n",
     "\n",
     "The for loop iterates over each element in an iterable (e.g., list, tuple, string) and executes the specified block of code for each element. The loop continues until all elements are processed.\n",
-    "#### SYNTAX\n",
     "\n",
-    "<pre><code>for variable in iterable object:\n",
+    "#### *SYNTAX*\n",
+    "```\n",
+    "for variable in iterable object:\n",
     "    Code line 1\n",
     "    Code line 2\n",
-    "</code></pre>\n",
+    "```\n",
     "\n",
-    "#### FLOW CHART\n",
+    "#### *FLOW CHART*\n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -37,7 +40,7 @@
    "id": "4040357f",
    "metadata": {},
    "source": [
-    "#### **Range Function:**\n",
+    "#### **Range Function in Loops:**\n",
     "The range() function generates a sequence of numbers, and it's often used with for loops. It allows you to iterate a specific number of times or create a sequence of values for iteration."
    ]
   },
@@ -145,7 +148,6 @@
     "# a simple code to print all the element of a given list\n",
     "\n",
     "a = ['a','b','c','d','e','a']\n",
-    "\n",
     "for i in range(len(a)):\n",
     "    print(a[i])"
    ]
@@ -474,6 +476,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "67ba71f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of the first 2 natural numbers is: 1\n",
+      "The sum of the first 2 natural numbers is: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Program to find the sum of first n natural numbers\n",
+    "\n",
+    "n = int(input(\"Enter a positive integer (n): \"))\n",
+    "\n",
+    "# Initialize the sum\n",
+    "sum_of_natural_numbers = 0\n",
+    "\n",
+    "# Using a for loop to iterate from 1 to n (inclusive)\n",
+    "for i in range(1, n + 1):\n",
+    "    sum_of_natural_numbers += i\n",
+    "\n",
+    "    print(f\"The sum of the first {n} natural numbers is: {sum_of_natural_numbers}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90c137ab",
+   "metadata": {},
+   "source": [
+    "#### **else with Loops**\n",
+    "- The else clause in a loop runs when the loop completes normally (i.e., not interrupted by a break)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0fef2932",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Loop completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"Loop completed\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2396f287",
    "metadata": {},
@@ -550,16 +617,17 @@
    "id": "a7613273",
    "metadata": {},
    "source": [
-    "### **'WHILE' LOOP**\n",
+    "### **WHILE LOOP**\n",
     "The while loop repeatedly executes a block of code as long as the specified condition is true. It's useful when you want to repeat a process until a certain condition is met.\n",
     "\n",
-    "#### SYNTAX\n",
-    "\n",
-    "<pre><code>while conditional statement:\n",
+    "#### *SYNTAX*\n",
+    "```\n",
+    "while conditional statement:\n",
     "    Code line 1\n",
     "    Code line 2\n",
-    "</code></pre>\n",
-    "#### FLOW CHART\n",
+    "```\n",
+    "\n",
+    "#### *FLOW CHART*\n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -795,7 +863,8 @@
    "source": [
     "#### **1.Break**\n",
     "Break is a loop control statement which would terminate the loop and executes the code after the loop. The loop will be terminated even though the last item is not reached in case of a 'for' loop and even though the condition is still satisfied in case of a 'while' loop.\n",
-    "#### FLOW CHART\n",
+    "\n",
+    "##### *FLOW CHART*\n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -989,8 +1058,7 @@
    "source": [
     "#### **Continue Statement:**\n",
     "\n",
-    "Usage: continue\n",
-    "The continue statement is used to skip the rest of the code inside the loop for the current iteration. It jumps to the next iteration of the loop."
+    "Usage: The continue statement is used to skip the rest of the code inside the loop for the current iteration. It jumps to the next iteration of the loop."
    ]
   },
   {
@@ -1098,46 +1166,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca758860",
+   "id": "640baa11",
    "metadata": {},
    "source": [
-    "write a program to find the sum of first n natural number using for loop"
+    "### **Pass Statement**\n",
+    "- The pass statement is a null operation; it is used when a statement is required syntactically but you don't want to execute any code."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "60527943",
+   "execution_count": 1,
+   "id": "75c5dbc1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of the first 6 natural numbers is: 1\n",
-      "The sum of the first 6 natural numbers is: 3\n",
-      "The sum of the first 6 natural numbers is: 6\n",
-      "The sum of the first 6 natural numbers is: 10\n",
-      "The sum of the first 6 natural numbers is: 15\n",
-      "The sum of the first 6 natural numbers is: 21\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
      ]
     }
    ],
    "source": [
-    "# Program to find the sum of first n natural numbers\n",
-    "\n",
-    "# Input: Get the value of 'n' from the user\n",
-    "n = int(input(\"Enter a positive integer (n): \"))\n",
-    "\n",
-    "# Initialize the sum\n",
-    "sum_of_natural_numbers = 0\n",
-    "\n",
-    "# Using a for loop to iterate from 1 to n (inclusive)\n",
-    "for i in range(1, n + 1):\n",
-    "    sum_of_natural_numbers += i\n",
-    "\n",
-    "# Display the result\n",
-    "    print(f\"The sum of the first {n} natural numbers is: {sum_of_natural_numbers}\")"
+    "for i in range(5):\n",
+    "    if i == 3:\n",
+    "        pass  # Do nothing, just a placeholder\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c66ce3e",
+   "metadata": {},
+   "source": [
+    "### **Pattern Creating**"
    ]
   },
   {
