--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -389,6 +389,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0beb85c4",
+   "metadata": {},
+   "source": [
+    "#### **Function with Arbitrary Arguments (`*args`)**\n",
+    "- If you want to pass a variable number of arguments to a function, you can use *args."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "127e8e11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_numbers(*args):\n",
+    "    return sum(args)\n",
+    "\n",
+    "print(sum_numbers(1, 2, 3, 4))  # Output: 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f922d61",
+   "metadata": {},
+   "source": [
+    "#### **Function with Keyword Arguments (`**kwargs`)**\n",
+    "- You can pass a variable number of keyword arguments using `**kwargs`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f109d7c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Sumer\n",
+      "age: 25\n",
+      "location: Manchanabale\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_info(**kwargs):\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "\n",
+    "display_info(name=\"Sumer\", age=25, location=\"Manchanabale\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "054134d8",
    "metadata": {},
    "source": [
@@ -464,30 +527,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "b8e39388",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['', 2, '', 4, '', 6, '', 8, '', 10]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ist = [1,2,3,4,5,6,7,8,9,10]\n",
-    "\n",
-    "even = list(map(lambda x: x if x%2==0 else '', ist))\n",
-    "even"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 51,
    "id": "c3844e75",
    "metadata": {},
@@ -517,9 +556,8 @@
    "id": "c905aae6",
    "metadata": {},
    "source": [
-    "### **map() Function:**\n",
-    "Definition:\n",
-    "map() applies a given function to all items in an input list (or any iterable)."
+    "#### **map() Function:**\n",
+    "- Definition: map() applies a given function to all items in an input list (or any iterable)."
    ]
   },
   {
@@ -549,6 +587,30 @@
     "\n",
     "#recalling function\n",
     "SquareIt(11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b8e39388",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', 2, '', 4, '', 6, '', 8, '', 10]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ist = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "even = list(map(lambda x: x if x%2==0 else '', ist))\n",
+    "even"
    ]
   },
   {
@@ -644,9 +706,8 @@
    "id": "44af5809",
    "metadata": {},
    "source": [
-    "### **filter() Function:**\n",
-    "Definition:\n",
-    "filter() constructs an iterator from elements of an iterable for which a function returns True."
+    "#### **filter() Function:**\n",
+    "- Definition: filter() constructs an iterator from elements of an iterable for which a function returns True."
    ]
   },
   {
@@ -738,7 +799,8 @@
    "id": "b58327fc",
    "metadata": {},
    "source": [
-    "### **Reduce() Function:**"
+    "#### **Reduce() Function:**\n",
+    "- The reduce() function in Python is used to apply a function cumulatively to the items of an iterable (like a list or tuple), reducing the iterable to a single value. It repeatedly applies the function to pairs of items, using the result of the previous computation in the next step. This function is part of the functools module."
    ]
   },
   {
@@ -1447,30 +1509,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "50a24c7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120\n"
-     ]
-    }
-   ],
-   "source": [
-    "def factorial(n):\n",
-    "    if n == 0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return n * factorial(n - 1)\n",
-    "\n",
-    "print(factorial(5))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "0743ca43",
    "metadata": {},
@@ -1580,320 +1618,6 @@
     "\n",
     "# Call the calculator function\n",
     "calculator()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d37b1287",
-   "metadata": {},
-   "source": [
-    "### **Codeing Challenge**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "74ed1bb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dummy student names\n",
-    "students = ['Alice', 'Bob', 'Charlie', 'David', 'Eva']\n",
-    "\n",
-    "# Specified subject names\n",
-    "subjects = ['Math', 'Science', 'English', 'History']\n",
-    "\n",
-    "# Dummy grades for each student (Math, Science, English, History)\n",
-    "grades = {\n",
-    "    'Alice': [90, 85, 92, 88],\n",
-    "    'Bob': [78, 95, 80, 70],\n",
-    "    'Charlie': [82, 60, 75, 88],\n",
-    "    'David': [65, 70, 68, 75],\n",
-    "    'Eva': [88, 92, 45, 90]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "d6f3cdd0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average grade for Alice: 88.75\n",
-      "Average grade for Bob: 80.75\n",
-      "Average grade for Charlie: 76.25\n",
-      "Average grade for David: 69.5\n",
-      "Average grade for Eva: 78.75\n"
-     ]
-    }
-   ],
-   "source": [
-    "def average_grade(grades_list):\n",
-    "    return sum(grades_list) / len(grades_list)\n",
-    "\n",
-    "for name in students:\n",
-    "    print(f\"Average grade for {name}:\", average_grade(grades[name]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "920fbe32",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Subject with highest grade for Alice: English\n",
-      "Subject with highest grade for Bob: Science\n",
-      "Subject with highest grade for Charlie: History\n",
-      "Subject with highest grade for David: History\n",
-      "Subject with highest grade for Eva: Science\n"
-     ]
-    }
-   ],
-   "source": [
-    "def highest_grade_subject(grades_list):\n",
-    "    max_grade = max(grades_list)\n",
-    "    max_index = grades_list.index(max_grade)\n",
-    "    return subjects[max_index]\n",
-    "\n",
-    "for name in students:\n",
-    "    print(f\"Subject with highest grade for {name}:\", highest_grade_subject(grades[name]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "fc0c7d0d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Passing students: ['Alice', 'Bob', 'Charlie', 'David']\n"
-     ]
-    }
-   ],
-   "source": [
-    "def passing_students(grades_dict):\n",
-    "    pass_students = []\n",
-    "    for student, grades_list in grades_dict.items():\n",
-    "        if all(grade >= 50 for grade in grades_list):\n",
-    "            pass_students.append(student)\n",
-    "    return pass_students\n",
-    "\n",
-    "print(\"Passing students:\", passing_students(grades))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "45f6399e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Subject-wise performance: {'Math': 80.6, 'Science': 80.4, 'English': 72.0, 'History': 82.2}\n"
-     ]
-    }
-   ],
-   "source": [
-    "def subject_wise_performance(grades_dict):\n",
-    "    performance = {}  # Initialize an empty dictionary to store average grades for each subject.\n",
-    "\n",
-    "    for subject in subjects:  # Iterate through each subject.\n",
-    "        \n",
-    "        subject_grades = []  # Initialize an empty list to store grades for the current subject.\n",
-    "        for student in grades_dict:  # Iterate through each student in the grades dictionary.\n",
-    "            grade_index = subjects.index(subject)  # Find the index of the subject in the subjects list.\n",
-    "            subject_grades.append(grades_dict[student][grade_index])  # Append the student's grade for the current subject to the list.\n",
-    "        \n",
-    "        performance[subject] = average_grade(subject_grades)  # Calculate and store the average grade for the current subject.\n",
-    "    \n",
-    "    return performance  # Return the dictionary with average grades for each subject.\n",
-    "\n",
-    "print(\"Subject-wise performance:\", subject_wise_performance(grades))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "ec45882d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Students failed in Math: []\n",
-      "Students failed in Science: []\n",
-      "Students failed in English: ['Eva']\n",
-      "Students failed in History: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "def students_failed_subject(grades_dict, subject):\n",
-    "    failed_students = []\n",
-    "    for student, grades_list in grades_dict.items():\n",
-    "        if grades_list[subjects.index(subject)] < 50:\n",
-    "            failed_students.append(student)\n",
-    "    return failed_students\n",
-    "\n",
-    "for subject in subjects:\n",
-    "    print(f\"Students failed in {subject}:\", students_failed_subject(grades, subject))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "d18e7c6f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overall best performing student: Alice\n"
-     ]
-    }
-   ],
-   "source": [
-    "def overall_performance(grades_dict):\n",
-    "    best_student = max(grades_dict, key=lambda student: average_grade(grades_dict[student]))\n",
-    "    return best_student\n",
-    "\n",
-    "print(\"Overall best performing student:\", overall_performance(grades))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "208e5e4e",
-   "metadata": {},
-   "source": [
-    "## **Question:**\n",
-    "\n",
-    "Write a Python function Role that, given an actor's name, determines and prints the roles (Hero, Heroine, Villain) played by that actor in various movies from a predefined dictionary, considering the priority of roles as Hero > Heroine > Villain.\n",
-    "\n",
-    "**Hints**\n",
-    "\n",
-    "- Start by defining the Role function with one parameter, Name_of_actor.\n",
-    "- Create a dictionary called movies with movie names as keys and lists of actors as values.\n",
-    "- Initialize three empty lists: Hero, Heroine, and Villain to store the roles played by the actor.\n",
-    "- Use a loop to iterate through the movies dictionary.\n",
-    "- Within the loop, check if the Name_of_actor exists in the list of actors for each movie.\n",
-    "- If the actor is found, determine their role in that movie (Hero, Heroine, or Villain) based on their index in the actors list.\n",
-    "- Append the movie name to the corresponding role list.\n",
-    "- After iterating through all movies, check if the actor played any roles and print out the roles along with the movie names.\n",
-    "- Test the function with different actor names to ensure it works correctly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a164602b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Movies of Sanjay Dutt: KGF2, Khalnayak, MunnaBhaiMBBS\n"
-     ]
-    }
-   ],
-   "source": [
-    "def find_movies(actor_name):\n",
-    "    movies = {\n",
-    "        'Darr': ['sunny', 'juhi', 'sharukh'],\n",
-    "        'Bahubali': ['prabhas', 'Anushka', 'Rana'],\n",
-    "        'Baazigar': ['Ajay', 'Kajol', 'sharukh'],\n",
-    "        'KGF2': ['Yash', 'srinidhi', 'Sanjay Dutt'],\n",
-    "        'Khalnayak': ['Jackie', 'Madhuri', 'Sanjay Dutt'],\n",
-    "        'DDLJ': ['Sharukh', 'kajol', 'amrish puri'],\n",
-    "        'MunnaBhaiMBBS': ['Sanjay Dutt', 'Gracy Singh', 'Boman Irani']\n",
-    "    }\n",
-    "\n",
-    "    movies_of_actor = []\n",
-    "    \n",
-    "    for movie, actors in movies.items():\n",
-    "        if actor_name in actors:\n",
-    "            movies_of_actor.append(movie)\n",
-    "\n",
-    "    if movies_of_actor:\n",
-    "        print(f\"Movies of {actor_name}: {', '.join(movies_of_actor)}\")\n",
-    "    else:\n",
-    "        print(f\"{actor_name} has not acted in any of the listed movies.\")\n",
-    "\n",
-    "# Example usage:\n",
-    "find_movies('Sanjay Dutt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a94221f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Role(Name_of_actor):\n",
-    "    movies = {\n",
-    "        'Darr': ['sunny', 'juhi', 'sharukh'],\n",
-    "        'Bahubali': ['prabhas', 'Anushka', 'Rana'],\n",
-    "        'Baazigar': ['Ajay', 'Kajol', 'sharukh'],\n",
-    "        'KGF2': ['Yash', 'srinidhi', 'Sanjay Dutt'],\n",
-    "        'Khalnayak': ['Jackie', 'Madhuri', 'Sanjay Dutt'],\n",
-    "        'DDLJ': ['Sharukh', 'kajol', 'amrish puri'],\n",
-    "        'MunnaBhaiMBBS': ['Sanjay Dutt', 'Gracy Singh', 'Boman Irani']\n",
-    "    }\n",
-    "\n",
-    "    Hero = []\n",
-    "    Heroine = []\n",
-    "    Villain = []\n",
-    "\n",
-    "    for movie, actors in movies.items():\n",
-    "        if Name_of_actor in actors:\n",
-    "            if actors.index(Name_of_actor) == 0:\n",
-    "                Hero.append(movie)\n",
-    "            elif actors.index(Name_of_actor) == len(actors) - 1:\n",
-    "                Villain.append(movie)\n",
-    "            else:\n",
-    "                Heroine.append(movie)\n",
-    "\n",
-    "    if Hero:\n",
-    "        print(Name_of_actor + \" acted as Hero in \" + \", \".join(Hero))\n",
-    "    if Heroine:\n",
-    "        print(Name_of_actor + \" acted as Heroine in \" + \", \".join(Heroine))\n",
-    "    if Villain:\n",
-    "        print(Name_of_actor + \" acted as Villain in \" + \", \".join(Villain))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfc6393c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sanjay Dutt acted as Hero in MunnaBhaiMBBS\n",
-      "Sanjay Dutt acted as Villain in KGF2, Khalnayak\n"
-     ]
-    }
-   ],
-   "source": [
-    "Role('Sanjay Dutt')"
    ]
   }
  ],
