--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -408,6 +408,36 @@
    "source": [
     "class person:\n",
     "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def displayname(self):\n",
+    "        print(self.name)\n",
+    "\n",
+    "obj = person(\"John\", 30)\n",
+    "print(obj.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'person' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__name)\n\u001b[0;32m      9\u001b[0m obj \u001b[38;5;241m=\u001b[39m person(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJohn\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m30\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'person' object has no attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self, name, age):\n",
     "        self.__name = name\n",
     "        self.__age = age\n",
     "\n",
@@ -415,7 +445,7 @@
     "        print(self.__name)\n",
     "\n",
     "obj = person(\"John\", 30)\n",
-    "obj.displayname()"
+    "print(obj.__name)"
    ]
   },
   {
