--- a/Python Basics/4.Conditional_Statements.ipynb
+++ b/Python Basics/4.Conditional_Statements.ipynb
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "ef5a076b",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12 is Even\n"
+      "13 is Odd\n"
      ]
     }
    ],
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "961b3c9a",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-10 is -ve number\n"
+      "Number is zero\n"
      ]
     }
    ],
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "5b9791ea",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "d40d32c1",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Palindrome\n"
+      "madam Palindrome\n"
      ]
     }
    ],
