--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "3b186dd2",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "007df63b",
    "metadata": {},
    "outputs": [
@@ -78,22 +78,19 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "3\n",
       "4\n",
-      "5\n",
-      "6\n",
-      "7\n"
+      "6\n"
      ]
     }
    ],
    "source": [
-    "for i in range(2, 8):\n",
+    "for i in range(2, 8, 2):\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "021aecea",
    "metadata": {},
    "outputs": [
@@ -117,7 +114,7 @@
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "\n",
     "for num in numbers:\n",
-    "    if (num%2==0):\n",
+    "    if num%2==0:\n",
     "        print(num, \"is even\")\n",
     "    else:\n",
     "        print(num, \"is odd\")"
@@ -146,7 +143,6 @@
    ],
    "source": [
     "# a simple code to print all the element of a given list\n",
-    "\n",
     "a = ['a','b','c','d','e','a']\n",
     "for i in range(len(a)):\n",
     "    print(a[i])"
@@ -154,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "ce0b7451",
    "metadata": {},
    "outputs": [
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "49981669",
    "metadata": {},
    "outputs": [
@@ -190,29 +186,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123 x 1 = 123\n",
-      "123 x 2 = 246\n",
-      "123 x 3 = 369\n",
-      "123 x 4 = 492\n",
-      "123 x 5 = 615\n",
-      "123 x 6 = 738\n",
-      "123 x 7 = 861\n",
-      "123 x 8 = 984\n",
-      "123 x 9 = 1107\n",
-      "123 x 10 = 1230\n"
+      "8 x 1 = 8\n",
+      "8 x 2 = 16\n",
+      "8 x 3 = 24\n",
+      "8 x 4 = 32\n",
+      "8 x 5 = 40\n",
+      "8 x 6 = 48\n",
+      "8 x 7 = 56\n",
+      "8 x 8 = 64\n",
+      "8 x 9 = 72\n",
+      "8 x 10 = 80\n"
      ]
     }
    ],
    "source": [
     "#creating a table\n",
-    "a = int(input(\"NUmber: \"))\n",
+    "a = int(input(\"Number: \"))\n",
     "for i in range(1,11):\n",
     "    print(a,'x',i,'=',a*i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "e0351ad9",
    "metadata": {},
    "outputs": [
@@ -242,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "12ba05bc",
    "metadata": {},
    "outputs": [
@@ -258,7 +254,7 @@
        " 'Neptune': 'N'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,6 +268,22 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "0c1d31b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planet_to_initial = {'Mercury': 'M',\n",
+    " 'Venus': 'V',\n",
+    " 'Mars': 'M',\n",
+    " 'Jupiter': 'J',\n",
+    " 'Saturn': 'S',\n",
+    " 'Uranus': 'U',\n",
+    " 'Neptune': 'N'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "6a5348a6",
    "metadata": {},
    "outputs": [
@@ -296,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "cda8c06f",
    "metadata": {},
    "outputs": [
@@ -304,7 +316,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Bhavan': '24', 'Rashmi': '24', 'Soundrya': '24', 'Prithvi': '26', 'Mahesh': '29'}\n"
+      "{'a': '1', 'b': '2', 'c': '3', 'd': '4', 'e': '5'}\n"
      ]
     }
    ],
@@ -332,6 +344,7 @@
     }
    ],
    "source": [
+    "#fibnoci sriese\n",
     "a, b = 0, 1\n",
     "\n",
     "for _ in range(10):\n",
@@ -341,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "522a2ecb",
    "metadata": {},
    "outputs": [
@@ -349,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 is Not a prime number\n"
+      "7 is Prime number\n"
      ]
     }
    ],
@@ -372,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "28e89a72",
    "metadata": {},
    "outputs": [
@@ -492,7 +505,6 @@
    ],
    "source": [
     "# Program to find the sum of first n natural numbers\n",
-    "\n",
     "n = int(input(\"Enter a positive integer (n): \"))\n",
     "\n",
     "# Initialize the sum\n",
@@ -516,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0fef2932",
    "metadata": {},
    "outputs": [
@@ -870,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "031eb6b8",
    "metadata": {},
    "outputs": [
