--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -385,6 +385,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5aa1561c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2 = []\n",
+    "a = [1,2,3,4]\n",
+    "for i in a:\n",
+    "    a2.append(i+2)\n",
+    "    \n",
+    "a2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "28e89a72",
    "metadata": {},
@@ -498,8 +524,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of the first 2 natural numbers is: 1\n",
-      "The sum of the first 2 natural numbers is: 3\n"
+      "The sum of the first 4 natural numbers is: 1\n",
+      "The sum of the first 4 natural numbers is: 3\n",
+      "The sum of the first 4 natural numbers is: 6\n",
+      "The sum of the first 4 natural numbers is: 10\n"
      ]
     }
    ],
@@ -563,6 +591,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "230cf34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 6 7 8 "
+     ]
+    }
+   ],
+   "source": [
+    "a = [[1,2,3],[4,5,6],[6,7,8]]\n",
+    "for i in a:\n",
+    "    for j in i:\n",
+    "        print(j, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "id": "01763d0a",
    "metadata": {},
@@ -589,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "6449621f",
    "metadata": {
     "scrolled": true
@@ -614,9 +663,41 @@
     "captains[\"Australia\"] = \"Tim Paine\"\n",
     "captains[\"South Africa\"] = \"Faf du Plessis\"\n",
     "#print(captains)\n",
-    "for i in captains:\n",
-    "    a= (i + ':' + captains[i])\n",
+    "for i , j in captains.items():\n",
+    "    a= (i + ':' + j)\n",
     "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09f3768c",
+   "metadata": {},
+   "source": [
+    "#### **for loop using Zip**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "88e655a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'a']\n",
+      "[2, 'b']\n",
+      "[3, 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = ['a', 'b', 'c', 'd']\n",
+    "\n",
+    "for i, j in zip(a,b):\n",
+    "    print([i,j])"
    ]
   },
   {
