--- a/Explorator Data Analysis/Titanic/Titanic .ipynb
+++ b/Explorator Data Analysis/Titanic/Titanic .ipynb
@@ -141,185 +141,12 @@
     "\n",
     "The Pandas library offers a wide range of possibilities for loading data into the pandas DataFrame from files like JSON, .csv, .xlsx, .sql, .pickle, .html, .txt, images etc.\n",
     "\n",
-    "Most of the data are available in a tabular format of CSV files. It is trendy and easy to access. Using the read_csv() function, data can be converted to a pandas DataFrame.\n",
-    "\n",
-    "In this article, the data to predict Used car price is being used as an example. In this dataset, we are trying to analyze the used car’s price and how EDA focuses on identifying the factors influencing the car price. We have stored the data in the DataFrame data."
+    "Most of the data are available in a tabular format of CSV files. It is trendy and easy to access. Using the read_csv() function, data can be converted to a pandas DataFrame."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e6a3beb2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>survived</th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>embarked</th>\n",
-       "      <th>class</th>\n",
-       "      <th>who</th>\n",
-       "      <th>adult_male</th>\n",
-       "      <th>deck</th>\n",
-       "      <th>embark_town</th>\n",
-       "      <th>alive</th>\n",
-       "      <th>alone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C</td>\n",
-       "      <td>First</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>S</td>\n",
-       "      <td>First</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  survived  pclass     sex   age  sibsp  parch     fare embarked  \\\n",
-       "0           0         0       3    male  22.0      1      0   7.2500        S   \n",
-       "1           1         1       1  female  38.0      1      0  71.2833        C   \n",
-       "2           2         1       3  female  26.0      0      0   7.9250        S   \n",
-       "3           3         1       1  female  35.0      1      0  53.1000        S   \n",
-       "4           4         0       3    male  35.0      0      0   8.0500        S   \n",
-       "\n",
-       "   class    who  adult_male deck  embark_town alive  alone  \n",
-       "0  Third    man        True  NaN  Southampton    no  False  \n",
-       "1  First  woman       False    C    Cherbourg   yes  False  \n",
-       "2  Third  woman       False  NaN  Southampton   yes   True  \n",
-       "3  First  woman       False    C  Southampton   yes  False  \n",
-       "4  Third    man        True  NaN  Southampton    no   True  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(r'D:\\Python\\EDA\\Titanic\\Titanic.csv')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "8822cb97",
    "metadata": {
     "scrolled": true
@@ -597,7 +424,7 @@
        "[891 rows x 15 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,6 +432,16 @@
    "source": [
     "df = sns.load_dataset('titanic')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4a76c0a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel(r'D:\\Python\\Explorator Data Analysis\\Titanic\\Titanic.xlsx', index=False)"
    ]
   },
   {
@@ -619,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "fd5f15b8",
    "metadata": {},
    "outputs": [
@@ -772,7 +609,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "92aa9821",
    "metadata": {},
    "outputs": [
@@ -936,7 +773,7 @@
        "890    man        True  NaN   Queenstown    no   True  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "0cbc0f1e",
    "metadata": {},
    "outputs": [
@@ -957,7 +794,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,12 +808,12 @@
    "id": "a0c525ff",
    "metadata": {},
    "source": [
-    "There are 891 observations and 12 variables in our dataset"
+    "There are 891 observations and 15 variables in our dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f10f6f51",
    "metadata": {},
    "outputs": [
@@ -989,7 +826,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ae8515a8",
    "metadata": {},
    "outputs": [
@@ -1047,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "36eafb46",
    "metadata": {},
    "outputs": [
@@ -1072,7 +909,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "94befe63",
    "metadata": {
     "scrolled": true
@@ -1209,7 +1046,7 @@
        "fare      891.0  32.204208  49.693429  0.00   7.9104  14.4542  31.0  512.3292"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "dd796efb",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1137,7 @@
        "alive         891      2           no  549"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,29 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "601e92a6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[NaN, 'C', 'E', 'G', 'D', 'A', 'B', 'F']\n",
-       "Categories (7, object): ['A', 'B', 'C', 'D', 'E', 'F', 'G']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['deck'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "e5fd4056",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1193,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "6ef07d5c",
    "metadata": {
     "scrolled": true
@@ -1412,7 +1227,7 @@
        "107"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,12 +1265,12 @@
     "\n",
     "Some columns or variables can be dropped if they do not add value to our analysis.\n",
     "\n",
-    "In our dataset, the column PassengerId and Cabin. have only ID values, assuming they don’t have any predictive power to predict the dependent variable."
+    "In our dataset, the column Cabin. have only ID values, assuming they don’t have any predictive power to predict the dependent variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "33f10e33",
    "metadata": {},
    "outputs": [],
@@ -1466,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "1a597d9c",
    "metadata": {},
    "outputs": [
@@ -1595,7 +1410,7 @@
        "4  Southampton   True  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3430,7 +3245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
