--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cee59c5c",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "02b21869",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum is 10\n"
+      "The sum is 5\n"
      ]
     }
    ],
@@ -770,12 +770,12 @@
     "while total < 10:\n",
     "    total += count\n",
     "    count += 1\n",
-    "print(f\"The sum is {total}\")"
+    "print(f\"The sum is {count}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "d8e08108",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "feee89af",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "22ad8f64",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
     "    j = 1\n",
     "    while j <= 4:\n",
     "        print(j**2, end=' ')\n",
-    "        j = j + 1\n",
+    "        j += 1\n",
     "    i = i + 1"
    ]
   },
@@ -963,7 +963,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "id": "c6c6e009",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,3,6]\n",
+    "\n",
+    "for i in a:\n",
+    "    print(i)\n",
+    "    if i == 3:\n",
+    "        break\n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "031eb6b8",
    "metadata": {},
    "outputs": [
@@ -971,6 +998,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
       "0\n",
       "1\n",
       "2\n",
@@ -983,8 +1011,8 @@
     }
    ],
    "source": [
-    "a = range(11)\n",
-    "\n",
+    "a = list(range(11))\n",
+    "print(a)\n",
     "for b in a:\n",
     "    if b == 8:\n",
     "        break\n",
@@ -1019,52 +1047,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n",
-      "22\n",
-      "24\n",
-      "26\n",
-      "28\n",
-      "30\n",
-      "32\n",
-      "34\n",
-      "36\n",
-      "38\n",
-      "40\n",
-      "42\n",
-      "44\n"
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44]\n"
      ]
     }
    ],
    "source": [
-    "a = range(120)\n",
+    "a = range(121)\n",
     "\n",
+    "b = []\n",
     "for i in a:\n",
     "    if i%2==0:\n",
-    "        print(i)\n",
+    "        b.append(i)\n",
     "    if i==44:\n",
-    "        break"
+    "        break\n",
+    "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "d37cd45e",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1164,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
+   "id": "1550f38a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = [1,2,3,4,5,6,7]\n",
+    "\n",
+    "for i in z:\n",
+    "    if i % 2 != 0:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "08a3f8ce",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "0587f5fc",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1264,7 @@
     "# Skipping odd numbers using continue\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "for num in numbers:\n",
-    "    if num % 2 != 0:\n",
+    "    if num % 2 == 1:\n",
     "        continue\n",
     "    print(f\"{num} is an even number.\")"
    ]
@@ -1268,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "75c5dbc1",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "37a61528",
    "metadata": {},
    "outputs": [
@@ -1342,13 +1375,14 @@
       "*\n",
       "**\n",
       "***\n",
-      "****\n"
+      "****\n",
+      "*****\n"
      ]
     }
    ],
    "source": [
     "print(\"\\nPyramid\")\n",
-    "for i in range(5):\n",
+    "for i in range(6):\n",
     "    x = '*'\n",
     "    x=x*i\n",
     "    print(f'{x}')"
