--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -1434,6 +1434,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "35f84f2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'div by 3'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 12\n",
+    "even = 'div by 3 & 5' if (a % 3 == 0 and a%5 == 0) else 'div by 3' if a%3 ==0 else 'div by 5' if a%5==0 else 'not by 3 & 5'\n",
+    "even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7419fc37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,6]\n",
+    "\n",
+    "div = [i for i in a if i % 3 == 0]\n",
+    "div"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "a3920fa9",
    "metadata": {},
@@ -1457,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "9e7d994b",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1514,7 @@
        "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,23 +1526,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "85302d54",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mylist3 = [num**2 for num in range(10)] # calculate square of all numbers between\n",
+    "mylist3 = [num**2 for num in range(11)] # calculate square of all numbers between\n",
     "mylist3"
    ]
   },
@@ -1533,30 +1580,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "cad54a87",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 0, 1: 2, 2: 4, 3: 6, 4: 8, 5: 10, 6: 12, 7: 14, 8: 16, 9: 18}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "double = {i:i*2 for i in range(10)} #double each value using dict comprehension\n",
-    "double"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "7b7073d9",
    "metadata": {},
    "outputs": [
     {
@@ -1565,19 +1590,19 @@
        "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "square = {i:i**2 for i in range(10)}\n",
-    "square"
+    "double = {i:i**2 for i in range(10)} #double each value using dict comprehension\n",
+    "double"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "45c1b691",
    "metadata": {},
    "outputs": [
@@ -1587,7 +1612,7 @@
        "{'one': 1, 'two': 2, 'three': 3, 'four': 4, 'five': 5}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
