--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -1802,10 +1802,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "22a2367f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple Calculator\n",
+      "1. Addition\n",
+      "2. Subtraction\n",
+      "3. Multiplication\n",
+      "4. Division\n",
+      "The result of addition is: 35.0\n"
+     ]
+    }
+   ],
    "source": [
     "def calculator():\n",
     "    print(\"Simple Calculator\")\n",
