--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -1853,6 +1853,34 @@
     "# Call the calculator function\n",
     "calculator()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "04420b34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "\n",
+    "    if n == 0:\n",
+    "\n",
+    "        return 1\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        return n * factorial(n - 1)\n",
+    "\n",
+    "print(factorial(5))"
+   ]
   }
  ],
  "metadata": {
