--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -34,9 +34,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " -----> w\tTo wirte data into file. If any data is already present in the file,it would be deleted and the present data will be stored.\n",
+    " -----> w mode:-\tTo wirte data into file. If any data is already present in the file,it would be deleted and the present data will be stored.\n",
     "\n",
-    " -----> r   To read data from the file. The file pointer is positioned at the beginning of the file.\n",
+    " -----> r mode:-   To read data from the file. The file pointer is positioned at the beginning of the file.\n",
+    "\n",
+    " -----> r+ Mode:- Opens the file for both reading and writing. The file pointer is placed at the beginning of the file. If the file does not exist, it raises a FileNotFoundError.\n",
+    "\n",
+    " -----> w+ mode:-Opens the file for both reading and writing. The file is truncated (emptied) when opened. If the file does not exist, a new file is created.\n",
     "\n",
     " -----> a   To append data to the file. Appending means adding at the end of existing data.The filepointer is placed at the end of the file.if the  file does not exist, it will create a new file for writing data.\n",
     "\n",
@@ -69,12 +73,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Why**\n",
+    "1. Data Storage Beyond Program Execution:Programs often need to store data beyond their runtime. Without file handling, any data generated during a program’s execution would be lost when the program terminates. File handling allows data to persist and be reused when needed.\n",
+    "\n",
+    "2. Handling Large Data Sets:Many real-world applications deal with large volumes of data that cannot be fully processed in memory (RAM). File handling enables storing such data on disk, where it can be accessed and processed incrementally.\n",
+    "\n",
+    "3. Facilitates Communication Between Programs:Files act as an intermediary for communication between different programs, processes, or systems, even across different platforms. For example, one system may write data to a file, and another system can read and process that data.\n",
+    "\n",
+    "4. Record Keeping and Logging:Many applications require continuous logging or recording of events, errors, or user activities. Files are the standard way to store this information for later analysis, monitoring, and debugging.\n",
+    "\n",
+    "5. Data Backup and Recovery:Files provide a mechanism for storing data safely outside of volatile memory. This is crucial for ensuring data integrity and availability, especially in cases of system crashes or power outages.\n",
+    "\n",
+    "6. Flexibility in Data Formats:File handling allows developers to choose the most suitable format for storing data (e.g., text, binary, CSV, JSON, XML). This flexibility supports a wide range of use cases, from simple text storage to complex data structures.\n",
+    "\n",
+    "7. Cross-Platform Portability:Files can be easily transferred across different systems and platforms. This makes file handling a universal method for sharing data between various machines, operating systems, and programs.\n",
+    "\n",
+    "8. Resource Optimization:Storing data in files minimizes the program’s memory usage. By storing large data sets on disk and reading them as needed, programs can operate efficiently without exhausting system resources.\n",
+    "\n",
+    "9. Compliance and Auditing:For businesses and applications subject to regulations, file handling allows for data storage in a way that can be audited. Logs, transaction records, and other important data can be securely stored and retrieved as needed.\n",
+    "\n",
+    "10. Customization and Automation:File handling allows for automatic creation, reading, writing, and manipulation of files. This is essential for tasks like batch processing, automated backups, or generating reports based on real-time data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Creating File**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is text file\n"
+      "This is a test file.\n"
      ]
     }
    ],
@@ -113,12 +143,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"D:\\\\Python\\\\Python Basics\\\\9.File_Handling\\\\test.txt\", 'w') as f:\n",
     "    f.write(\"This is a test file.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Content before writing: This is a test file.\n",
+      "Content after writing: This is new content.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# r+ example: Reading and writing to an existing file\n",
+    "with open('test.txt', 'r+') as file:\n",
+    "    content = file.read()  # Reading the file content\n",
+    "    print('Content before writing:', content)\n",
+    "    \n",
+    "    file.seek(0)  # Set file pointer to the beginning\n",
+    "    file.write('This is new content')  # Overwriting existing content\n",
+    "    file.seek(0)  # Reset pointer to the beginning again\n",
+    "    updated_content = file.read()  # Read the updated content\n",
+    "    print('Content after writing:', updated_content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Content after writing: This is a new line of text\n"
+     ]
+    }
+   ],
+   "source": [
+    "# w+ example: Writing and then reading the file\n",
+    "with open('test.txt', 'w+') as file:\n",
+    "    file.write('This is a new line of text')  # Writing new content\n",
+    "    file.seek(0)  # Set file pointer to the beginning\n",
+    "    content = file.read()  # Reading the content back\n",
+    "    print('Content after writing:', content)\n"
    ]
   },
   {
@@ -200,36 +279,6 @@
    "metadata": {},
    "source": [
     "### **Reading the File**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test@example.com\n",
-      "123-456-7890\n",
-      "Start this string\n",
-      "This string ends with End\n",
-      "123456\n",
-      "Contains whitespace \n",
-      "pretest and posttest\n",
-      "@#!$%\n",
-      "5This does not start with a digit\n",
-      "NoWhitespaceHere\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "file = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
-    "res = file.read()\n",
-    "print(res)\n",
-    "file.close()"
    ]
   },
   {
@@ -976,7 +1025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
