--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -312,21 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test@example.com\n",
-      "123\n"
+      "['test@example.com\\n', '123-456-7890\\n', 'Start this string\\n', 'This string ends with End\\n', '123456\\n', 'Contains whitespace \\n', 'pretest and posttest\\n', '@#!$%\\n', '5This does not start with a digit\\n', 'NoWhitespaceHere\\n']\n"
      ]
     }
    ],
    "source": [
     "file = open(\"myfile.txt\", \"r\")\n",
-    "content = file.read(20)  # Reads the first 10 characters\n",
+    "content = file.readlines()  # Reads the first 10 characters\n",
     "print(content)\n",
     "file.close()"
    ]
@@ -465,20 +464,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','w')\n",
+    "f = open('myfile.txt','w')\n",
     "str = 'Current content of the file: I am a learner, Python is easy to learn'\n",
     "f.write(str)\n",
-    "\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -487,13 +485,13 @@
        "'Current content of the file: I am a learner, Python is easy to learn'"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
+    "f = open('myfile.txt','r')\n",
     "f.read()"
    ]
   },
@@ -508,13 +506,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt', 'w') as file:\n",
+    "with open('myfile.txt', 'w') as file:\n",
     "   l1 = \"Welcome to TutorialsPoint\\n\"\n",
-    "   l2 = \"Write multiple lines \\n\"\n",
+    "   l2 = \"Write multiple lines\\n\"\n",
     "   l3 = \"Done successfully\\n\"\n",
     "   l4 = \"Thank You!\"\n",
     "   file.writelines([l1, l2, l3, l4])\n",
@@ -523,19 +521,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Welcome to TutorialsPoint', 'Write multiple lines ', 'Done successfully', 'Thank You!']\n"
+      "Welcome to TutorialsPoint\n",
+      "Write multiple lines\n",
+      "Done successfully\n",
+      "Thank You!\n"
      ]
     }
    ],
    "source": [
-    "with open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt') as f:\n",
+    "with open('myfile.txt', 'r') as file:\n",
+    "    print(file.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Welcome to TutorialsPoint\\n', 'Write multiple lines\\n', 'Done successfully\\n', 'Thank You!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('myfile.txt', 'r') as file:\n",
+    "    print(file.readlines())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Welcome to TutorialsPoint', 'Write multiple lines', 'Done successfully', 'Thank You!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('myfile.txt') as f:\n",
     "    data = f.read().strip().split('\\n')\n",
     "    print(data)\n",
     "    f.close()"
@@ -543,32 +580,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fvar = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','w')\n",
-    "list1=[\"Hello \",\"Hi \",\"How ru\"]\n",
+    "fvar = open('myfile.txt','w')\n",
+    "list1=[\"Hello\\n\",\"Hi\\n\",\"How ru\"]\n",
     "fvar.writelines(list1)\n",
     "fvar.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Hi How ru\n"
+      "['Hello', 'Hi', 'How ru']\n"
      ]
     }
    ],
    "source": [
     "with open('myfile.txt','r') as f:\n",
-    "    data = f.read()\n",
+    "    data = f.read().split('\\n')\n",
     "    print(data)"
    ]
   },
@@ -581,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,16 +632,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hello Hi How ru', 'Good Night']"
+       "['Hello', 'Hi', 'How ru', 'Good Night']"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,17 +667,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "o Hi How ru\n",
-      "Good NightPython\n",
-      "Python\n",
-      "Python\n"
+      "Hello\n",
+      "Hi\n",
+      "How ru\n",
+      "Good Night\n"
      ]
     }
    ],
@@ -651,7 +688,7 @@
     "\n",
     "f.write(str+\"\\n\")\n",
     "\n",
-    "f.seek(4)\n",
+    "f.seek(0)\n",
     "\n",
     "str = f.read().strip()\n",
     "print(str)\n",
@@ -668,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,6 +719,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hi\n",
+      "How ru\n",
+      "Good Night\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('output.txt', 'r')\n",
+    "print(f.read())\n",
+    "f.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -690,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,19 +760,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file does not exist\n"
+      "file\n"
      ]
     }
    ],
    "source": [
-    "if os.path.exists(\"output.txt\"):\n",
+    "if os.path.exists(\"myfile.txt\"):\n",
     "    print(\"file\")\n",
     "else:\n",
     "  print(\"The file does not exist\")"
